src/test/ui/issues/issue-17033.stderr
error[E0308]: mismatched types
  --> $DIR/issue-17033.rs:2:10
   |
LL |     (*p)(())
   |          ^^
   |          |
   |          expected &mut (), found ()
   |          help: consider mutably borrowing here: `&mut ()`
   |
   = note: expected type `&mut ()`
              found type `()`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
